test/expected/explain_vf_v-c.out
explain virtual void f()
        ^
9: error: "virtual": unsupported keyword in C
